--- a/example-pos-ui-extensions--printer--preact/shopify.app.toml
+++ b/example-pos-ui-extensions--printer--preact/shopify.app.toml
@@ -1,8 +1,8 @@
 # Learn more about configuring your app at https://shopify.dev/docs/apps/tools/cli/configuration
 
 client_id = ""
-name = "example-pos-ui-extensions"
-application_url = "https://shopify.dev/apps/default-app-home"
+name = "example-pos-ui-printer"
+application_url = "https://example.com"
 embedded = true
 
 [build]
@@ -12,9 +12,17 @@ include_config_on_deploy = true
 [webhooks]
 api_version = "2026-01"
 
+  [[webhooks.subscriptions]]
+  topics = [ "app/uninstalled" ]
+  uri = "/webhooks/app/uninstalled"
+
+  [[webhooks.subscriptions]]
+  topics = [ "app/scopes_update" ]
+  uri = "/webhooks/app/scopes_update"
+
 [access_scopes]
 # Learn more at https://shopify.dev/docs/apps/tools/cli/configuration#access_scopes
-scopes = ""
+scopes = "write_products"
 
 [auth]
-redirect_urls = [ "https://shopify.dev/apps/default-app-home/api/auth" ]
+redirect_urls = [ "https://example.com/api/auth" ]
